--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "ai-agentic-app",
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "query": "node query.js",
+    "ingest": "node index.js",
+    "lint": "eslint . --ext .js"
+  },
   "dependencies": {
     "@google/genai": "^1.34.0",
     "@langchain/community": "^1.1.1",
@@ -6,9 +15,13 @@
     "@langchain/google-genai": "^1.0.3",
     "@langchain/pinecone": "^1.0.1",
     "@langchain/textsplitters": "^1.0.1",
-    "@pinecone-database/pinecone": "^6.1.3",
-    "dotenv": "^17.2.3",
+    "@pinecone-database/pinecone": "^5.1.2",
+    "dotenv": "^16.6.1",
     "pdf-parse": "^1.1.1",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "openai": "^4.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0"
   }
 }
