--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.0.6",
     "@langchain/google-genai": "^1.0.3",
+    "@langchain/openai": "^1.2.0",
     "@langchain/pinecone": "^1.0.1",
     "@langchain/textsplitters": "^1.0.1",
     "@pinecone-database/pinecone": "^5.1.2",
     "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "langchain": "^1.2.3",
+    "openai": "^4.8.0",
     "pdf-parse": "^1.1.1",
     "readline-sync": "^1.4.10",
-    "openai": "^4.8.0",
-    "express": "^4.18.2"
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "eslint": "^8.50.0"
